--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,17 +1,16 @@
 .popup__input {
+    color: #000000;
     border: 0;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(00, 00, 00, 0.2);
     margin: 0;
     padding: 0;
     margin-top: 30px;
     font-size: 14px;
     font-weight: 400;
-    line-height: 16.94px;
+    line-height: 17px;
     margin-left: 36px;
     margin-right: 36px;
     padding-bottom: 13px;
-    outline: none;
-
 }
 
 .popup__input:first-child {
