--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -1,7 +1,7 @@
 .popup__item {
     display: flex;
     flex-direction: column;
-    border: 0;
+    border: none;
     margin: 0;
     padding: 0;
 }
