--- a/blocks/element/__item/element__item.css
+++ b/blocks/element/__item/element__item.css
@@ -1,5 +1,5 @@
 .element__item {
-    color: black;
+    color: #000000;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
