--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,14 +2,15 @@
     margin: 25px auto 33px;
     max-width: 880px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 282px);
     gap: 20px 17px;
+    justify-content: center;
 }
 
 @media screen and (max-width: 1080px) {
     .elements {
         margin: 25px 100px 33px;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 282px);
         gap: 25px 30px;
 }
 }
@@ -17,7 +18,7 @@
 @media screen and (max-width: 800px) {
     .elements {
         margin: 20px 19px 25px;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 282px);
         gap: 20px 17px;
 }
 }
