--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,7 +2,14 @@
     color: #545454;
     font-size: 18px;
     font-weight: 400;
-    line-height: 21.78px;
+    line-height: 22px;
     margin: 0;
     padding: 0;
+}
+
+@media screen and (max-width: 650px) {
+    .footer__copyright {
+        font-size: 14px;
+        line-height: 17px;
+    }
 }
