--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,13 +1,18 @@
+.header__logo {
+    width: 142px;
+    height: 33px;
+    display: block;
+    object-fit: contain;
+}
+
 @media screen and (max-width: 800px) {
     .header__logo {
         margin-left: 27px;
-        object-fit: cover;
 }
 }
 
 @media screen and (max-width: 420px) {
     .header__logo {
         min-width: 103.74px;
-        height: 24.4px;
 }
 }
