--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,8 @@
 .header {
     max-width: 880px;
-    min-height: 74px;
     margin: 45px auto 20px;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(54, 54, 54, 0.5);
+    padding-bottom: 41px;
 }
 
 @media screen and (max-width: 1080px) {
@@ -14,7 +14,7 @@
 @media screen and (max-width: 800px) {
     .header {
         margin: 28px 0 21px;
-        min-height: 56px;
+        padding-bottom: 31.6px;
 
 }
 }
