--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
-    background-color: black;
+    background-color: #000000;
     padding: 0;
-    color: white;
+    color: #FFFFFF;
     font-family: "Inter", Arial, sans-serif;
     min-width: 320px;
     max-width: 1280px;
