--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,16 +1,17 @@
 .popup__submit {
-    max-width: 358px;
+    width: 358px;
     height: 50px;
-    background-color: black;
+    background-color: #000000;
     align-items: center;
-    color: white;
+    color: #FFFFFF;
     padding: 0;
     margin: 48px 36px 37px;
     font-size: 18px;
-    line-height: 21.78px;
+    line-height: 22px;
     font-weight: 400;
     transition: 0.5s;
     cursor: pointer;
+    border-radius: 2px;
 }
 
 .popup__submit:hover {
@@ -20,10 +21,10 @@
 
 @media screen and (max-width: 650px) {
     .popup__submit {
-        max-width: 238px;
+        width: 238px;
         height: 46px;
         font-size: 14px;
-        line-height: 16.94px;
+        line-height: 17px;
         margin: 45px 22px 25px;
     }
 }
