--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,6 +6,9 @@
     bottom: 0;
     right: 0;
     left: 0;
-    background-color: rgba(54,54,54, 0.5);
+    background-color: rgba(00,00,00, 0.5);
     display: none;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
 }
