--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -3,23 +3,27 @@
     padding: 0;
     font-weight: 400;
     font-size: 18px;
-    line-height: 21.78px;
+    line-height: 22px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 294px;
+    width: 336px;
 }
+
+
 
 @media screen and (max-width: 650px) {
     .profile__about {
         justify-self: center;
+        text-align: center;
     } 
 }
 
 @media screen and (max-width: 420px) {
     .profile__about{
         font-size: 14px;
-        line-height: 16.94px;
-        max-width: 282px;
+        line-height: 17px;
+        width: 282px;
+        
     } 
 }
