--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,9 +1,15 @@
 .profile__add-button {
-    position: relative;
-    left: 0;
     width: 150px;
     height: 50px;
     align-self: center;
+    background-image: url(../../../images/add-button.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto;
+    padding: 0;
+    margin: 0;
+    border: 2px solid #FFFFFF;
+    border-radius: 4px;
 }
 
 @media screen and (max-width: 650px) {
