--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,11 +1,9 @@
 .profile__button {
-    border: 2px solid #FFFFFF;
-    border-radius: 2px;
-    background-color: black;
+    background-color: rgba(00, 00, 00, 0);
     transition: 0.5s;
     cursor: pointer;
 }
 
 .profile__button:hover {
-    opacity: 0.5;
+    opacity: 0.6;
 }
