--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,6 +5,10 @@
     margin: 0;
     padding: 0;
     align-self: center;
+    background-image: url(../../../images/edit-button.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto;
 }
 
 @media screen and (max-width: 420px) {
