--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,15 @@
 .profile__info {
     margin-left: 30px;
     display: grid;
-    grid-template-columns: 1fr 24px;
+    grid-template-columns: 294px 24px;
     gap: 16px 18px;
     align-self: center;
+}
+
+@media screen and (max-width: 900px) {
+    .profile__info {
+        grid-template-columns: 250px 24px;
+}
 }
 
 @media screen and (max-width: 650px) {
@@ -11,12 +17,13 @@
         margin-top: 26px;
         margin-left: 0;
         gap: 14px 10px;
+        grid-template-columns: 300px 24px;
 }
 }
 
 @media screen and (max-width: 420px) {
     .profile__info{
-        grid-template-columns: 1fr 18px;
+        grid-template-columns: 189px 18px;
         margin-left: 19px;
         margin-right: 19px;
     } 
