--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,6 @@
-@import url(../blocks/page/page.css);
+@import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
-
-@import url(../blocks/button/button.css);
+@import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -23,6 +22,7 @@
 @import url(../blocks/element/__item/element__item.css);
 @import url(../blocks/element/__name/element__name.css);
 @import url(../blocks/element/__button/element__button.css);
+@import url(../blocks/element/__button/_active/element__button_active.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -35,4 +35,4 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
-@import url(../blocks/popup/_opend/popup_opend.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
