--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -1,5 +1,5 @@
 .element__button {
-    background-color: rgba(255, 255, 255, 0);
+    background-color: transparent;
     height: 19px;
     width: 22px;
     align-self: center;
@@ -8,7 +8,7 @@
     padding: 0;
     transition: 0.5s;
     cursor: pointer;
-    background-image: url(../../../images/like.png);
+    background-image: url(../../../images/like.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
