--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,5 +1,5 @@
 .elements {
-    margin: 25px auto 33px;
+    margin: 50px auto 66px;
     max-width: 880px;
     display: grid;
     grid-template-columns: repeat(3, 282px);
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 1080px) {
     .elements {
-        margin: 25px 100px 33px;
+        margin: 50px 100px 66px;
         grid-template-columns: repeat(2, 282px);
         gap: 25px 30px;
 }
@@ -18,16 +18,15 @@
 @media screen and (max-width: 800px) {
     .elements {
         margin: 20px 19px 25px;
-        grid-template-columns: repeat(2, 282px);
         gap: 20px 17px;
 }
 }
 
 @media screen and (max-width: 650px) {
     .elements {
-        margin: 20px 19px 25px;
         grid-template-columns: repeat(1, 282px);
         justify-content: center;
-        margin-top: 18px;
+        margin-top: 36px;
+        margin-bottom: 48px;
 }
 }
