--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,12 +1,10 @@
 .footer {
     max-width: 880px;
-    margin: 0 auto;
-    padding: 33px 0 60px;
+    margin: 0 auto 60px;
 }
 
 @media screen and (max-width: 650px) {
     .footer {
-        margin: 0 19px;
-        padding: 24px 0 36px;
+        margin: 0 19px 36px;
 }
 }
