--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -4,9 +4,9 @@
     padding: 0;
     margin: 0;
     border: 0;
-    background-image: url(../../../images/close-icon.png);
-    background-color: rgba(54, 54, 54, 0);
-    position: relative;
+    background-image: url(../../../images/close-icon.svg);
+    background-color: transparent;
+    position: absolute;
     right: -40px;
     top: -40px;
     cursor: pointer;
