--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -6,9 +6,10 @@
     border-radius: 10px;
     color: #000000;
     box-sizing: border-box;
-    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 @media screen and (max-width: 650px) {
