--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,20 +2,20 @@
     width: 150px;
     height: 50px;
     align-self: center;
-    background-image: url(../../../images/add-button.png);
+    background-image: url(../../../images/add-button.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: auto;
+    background-size: 22px 22px;
     padding: 0;
     margin: 0;
     border: 2px solid #FFFFFF;
-    border-radius: 4px;
+    border-radius: 2px;
 }
 
 @media screen and (max-width: 650px) {
     .profile__add-button{
         width: 282px;
         height: 50px;
-        margin-top: 36px;
+        background-size: 16px 16px;
     } 
 }
