--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,27 +2,32 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 20px 0 25px;
     max-width: 880px;
     margin: 0 auto;
 }
 
 @media screen and (max-width: 1080px) {
     .profile {
-        padding: 20px 100px 25px;
+       margin: 0 100px; 
 }
 }
 
 @media screen and (max-width: 800px) {
     .profile {
-        padding: 20px 19px 25px;
-}
+   margin: 0 19px;     
+}    
 }
 
 @media screen and (max-width: 650px) {
     .profile {
         flex-direction: column;
-        padding: 21px 0 18px;
+        
+}
+}
 
+@media screen and (max-width: 420px) {
+    .profile {
+        display: flex;
+        
 }
 }
