--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,6 +3,20 @@
     margin: 0 auto 60px;
 }
 
+@media screen and (max-width: 1080px) {
+    .footer {
+        margin-left: 100px;
+        margin-right: 100px;
+}
+}
+
+@media screen and (max-width: 800px) {
+    .footer {
+        margin-left: 19px;
+        margin-right: 19px;
+}
+}
+
 @media screen and (max-width: 650px) {
     .footer {
         margin: 0 19px 36px;
