--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -11,7 +11,11 @@
     margin-top: 16px;
 }
 
-
+@media screen and (max-width: 900px) {
+    .profile__about {
+        width: 300px;
+    } 
+}
 
 @media screen and (max-width: 650px) {
     .profile__about {
@@ -26,6 +30,6 @@
         line-height: 17px;
         width: 282px;
         margin-top: 0;
-        overflow: inherit;
+        align-self: baseline;
     } 
 }
