--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -12,6 +12,14 @@
     border-radius: 2px;
 }
 
+@media screen and (max-width: 900px) {
+    .profile__add-button{
+        width: 125px;
+        height: 50px;
+        background-size: 16px 16px;
+    } 
+}
+
 @media screen and (max-width: 650px) {
     .profile__add-button{
         width: 282px;
