--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -16,6 +16,13 @@
 }
 }
 
+@media screen and (max-width: 900px) {
+    .profile__name {
+        font-size: 27px;
+        width: 280px;
+}
+}
+
 @media screen and (max-width: 650px) {
     .profile__name {
         text-align: center;
@@ -27,6 +34,6 @@
         font-size: 27px;
         line-height: 33px;
         width: 189px;
-        overflow: inherit;
+        align-self: baseline;
     } 
 }
