--- a/pages/index.css
+++ b/pages/index.css
@@ -36,6 +36,10 @@
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_type/popup__input-error_type_active.css);
+@import url(../blocks/popup/__submit/_disabled/popup__submit_disabled.css);
 
 @import url(../blocks/popup-zoom/popup-zoom.css);
 @import url(../blocks/popup-zoom/__container/popup-zoom__container.css);
