--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    height: 330px;
 }
 
 @media screen and (max-width: 650px) {
