--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -7,7 +7,8 @@
     padding: 0;
     margin-top: 5px;
     margin-left: 36px;
-    display: none;
+    visibility: hidden;
+    height: 30px;
 }
 
 @media screen and (max-width: 650px) {
