--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -13,6 +13,7 @@
     transition: 0.5s;
     cursor: pointer;
     border-radius: 2px;
+    margin-top: 0;
 }
 
 .popup__submit:hover {
@@ -27,5 +28,6 @@
         font-size: 14px;
         line-height: 17px;
         margin: 45px 22px 25px;
+        margin-top: 0;
     }
 }
