--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
 .profile{display:flex;flex-direction:row;justify-content:space-between;margin:0 auto;max-width:880px}@media screen and (max-width:1080px){.profile{margin:0 100px}}@media screen and (max-width:800px){.profile{margin:0 19px}}@media screen and (max-width:650px){.profile{flex-direction:column}}
 .profile__user{align-items:center;display:flex}@media screen and (max-width:650px){.profile__user{flex-direction:column}}
 .profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}
+.profile__avatar-button{background-color:#000;background-image:url(8667ac4a523e8fc42e59.svg);background-position:50%;background-repeat:no-repeat;background-size:26px 26px;border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;opacity:0;position:absolute;transition:.5s ease;width:120px;z-index:1}.profile__avatar-button:hover{opacity:.8}
 .profile__info{align-self:center;display:grid;grid-template-columns:294px 24px;margin-left:30px}@media screen and (max-width:900px){.profile__info{grid-template-columns:280px 24px}}@media screen and (max-width:650px){.profile__info{grid-template-columns:300px 24px;margin-bottom:36px;margin-top:26px}}@media screen and (max-width:420px){.profile__info{grid-row-gap:14px;-moz-column-gap:10px;column-gap:10px;grid-template-columns:189px 18px;grid-template-rows:26px 14px}}
 .profile__name{font-size:42px;font-weight:500;line-height:48px;margin:0;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap;width:294px}@media screen and (max-width:1080px){.profile__name{font-size:35px}}@media screen and (max-width:900px){.profile__name{font-size:27px;width:280px}}@media screen and (max-width:650px){.profile__name{text-align:center}}@media screen and (max-width:420px){.profile__name{align-self:baseline;font-size:27px;line-height:33px;width:189px}}
 .profile__button{background-color:transparent;cursor:pointer;transition:.5s}.profile__button:hover{opacity:.6}
@@ -16,18 +17,19 @@
 .elements{display:grid;gap:20px 17px;grid-template-columns:repeat(3,282px);justify-content:center;margin:50px auto 66px;max-width:880px}@media screen and (max-width:1080px){.elements{gap:25px 30px;grid-template-columns:repeat(2,282px);margin:50px 100px 66px}}@media screen and (max-width:800px){.elements{gap:20px 17px;margin:50px 19px 25px}}@media screen and (max-width:650px){.elements{grid-template-columns:repeat(1,282px);justify-content:center;margin-bottom:48px;margin-top:36px}}
 .element{background-color:#fff;border-radius:10px;box-sizing:border-box;position:relative;width:282px}
 .element__image{border-radius:10px 10px 0 0;cursor:pointer;display:block;height:282px;-o-object-fit:cover;object-fit:cover;width:282px}
-.element__item{color:#000;display:flex;flex-direction:row;justify-content:space-between;padding:25px 15px 31px 21px}
+.element__item{color:#000;display:flex;flex-direction:row;justify-content:space-between;padding:22px 21px}
 .element__name{font-size:24px;font-weight:900;line-height:29px;margin:0;max-width:200px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
 .element__button{align-self:center;background-color:transparent;background-image:url(87ed371465c7a6a1cd01.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;height:19px;margin:0;padding:0;transition:.5s;width:22px}.element__button:hover{opacity:.5}
 .element__button_active{background-image:url(fe17a515669479b1e649.svg)}
 .element__delete{align-self:center;background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;height:19px;margin:0;padding:0;position:absolute;right:20px;top:20px;transition:.5s;width:18px}.element__delete:hover{opacity:.6}
+.element__like-count{font-size:13px;font-weight:400;line-height:16px;margin:0;padding:0;text-align:center}
 .footer{margin:0 auto 60px;max-width:880px}@media screen and (max-width:1080px){.footer{margin-left:100px;margin-right:100px}}@media screen and (max-width:800px){.footer{margin-left:19px;margin-right:19px}}@media screen and (max-width:650px){.footer{margin:0 19px 36px}}
 .footer__copyright{color:#545454;font-size:18px;font-weight:400;line-height:22px;margin:0;padding:0}@media screen and (max-width:650px){.footer__copyright{font-size:14px;line-height:17px}}
 .popup{background-color:rgba(0,0,0,.5);bottom:0;box-sizing:border-box;display:flex;height:100vh;left:0;opacity:0;position:fixed;right:0;top:0;transition:visibility .5s,opacity .5s linear;visibility:hidden;width:100vw}
 .popup__container{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;color:#000;display:flex;flex-direction:column;height:330px;margin:auto;max-width:430px;min-width:282px;position:relative}@media screen and (max-width:650px){.popup__container{max-width:282px}}
 .popup__title{font-size:24px;font-weight:900;line-height:29px;margin:34px 64px 54px 36px;max-width:330px}@media screen and (max-width:650px){.popup__title{font-size:18px;line-height:22px;margin:25px 22px 75px;max-width:238px}}
 .popup__item{border:none;display:flex;flex-direction:column;margin:0;padding:0}
-.popup__input{border:0;border-bottom:1px solid rgba(0,0,0,.2);color:#000;font-size:14px;font-weight:400;line-height:17px;margin:0 36px;padding:0 0 13px}.popup__input:first-child{margin-top:0}@media screen and (max-width:650px){.popup__input{margin-left:22px;margin-right:22px}}
+.popup__input{border:0;border-bottom:1px solid rgba(0,0,0,.2);color:#000;font-size:14px;font-weight:400;height:14px;line-height:17px;margin:0 36px;padding:0 0 13px}.popup__input:first-child{margin-top:0}@media screen and (max-width:650px){.popup__input{margin-left:22px;margin-right:22px}}
 .popup__close{align-self:end;background-color:transparent;background-image:url(2ceb783afbab75916ddc.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;border:0;cursor:pointer;height:32px;margin:0;padding:0;position:absolute;right:-40px;top:-40px;transition:.5s;width:32px}.popup__close:hover{opacity:.6}@media screen and (max-width:650px){.popup__close{height:20px;right:0;width:20px}}
 .popup__submit{align-items:center;background-color:#000;border:none;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;font-weight:400;height:50px;line-height:22px;margin:0 36px 37px;padding:0;transition:.5s;width:358px}.popup__submit:hover{opacity:.8}@media screen and (max-width:650px){.popup__submit{font-size:14px;height:46px;line-height:17px;margin:0 22px 25px;width:238px}}
 .popup_opened{opacity:1;visibility:visible}
@@ -40,4 +42,11 @@
 .popup-zoom__image{max-height:75vh;max-width:75vw}@media screen and (max-width:420px){.popup-zoom__image{height:299px;width:240px}}
 .popup-zoom__title{font-size:12px;font-weight:400;line-height:15px;margin:10px 0 0;padding:0;width:291px}@media screen and (max-width:420px){.popup-zoom__title{width:240px}}
 @media screen and (max-width:420px){.popup-zoom__close{right:0}}
+.popup-delete__container{height:181px}
+.popup-delete__title{height:23px;margin-bottom:38px}
+.popup-delete__submit{height:50px}
+.popup-avatar__container{height:272px}
+.popup-avatar__submit{margin-top:43px}
+.popup-avatar__title{height:23px}
+.popup-avatar__input-error{height:0}
 
