--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,6 +10,7 @@
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__user/profile__user.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__button/profile__button.css);
@@ -26,6 +27,7 @@
 @import url(../blocks/element/__button/element__button.css);
 @import url(../blocks/element/__button/_active/element__button_active.css);
 @import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/element/__like-count/element__like-count.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -48,3 +50,12 @@
 @import url(../blocks/popup-zoom/__image/popup-zoom__image.css);
 @import url(../blocks/popup-zoom/__title/popup-zoom__title.css);
 @import url(../blocks/popup-zoom/__close/popup-zoom__close.css);
+
+@import url(../blocks/popup-delete/__container/popup-delete__container.css);
+@import url(../blocks/popup-delete/__title/popup-delete__title.css);
+@import url(../blocks/popup-delete/__submit/popup-delete__submit.css);
+
+@import url(../blocks/popup-avatar/__container/popup-avatar__container.css);
+@import url(../blocks/popup-avatar/__submit/popup-avatar__submit.css);
+@import url(../blocks/popup-avatar/__title/popup-avatar__title.css);
+@import url(../blocks/popup-avatar/__input-error/popup-avatar__input-error.css);
